force-app/main/default/objects/Billing_Center_Section_Config__c/Billing_Center_Section_Config__c.object-meta.xml
<CustomObject>
    <description>Defines sections inside each Billing Control Center tab.</description>
    <label>Billing Center Section Config</label>
    <nameField>
        <displayFormat>BCSEC-{00000}</displayFormat>
        <label>Billing Center Section Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Section Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>