force-app/main/default/objects/Billing_Center_Section_Config__c/fields/Dataset_Key__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Key__c</fullName>
    <label>Dataset Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>