force-app/main/default/objects/Billing_Center_Section_Config__c/fields/Empty_State_Message__c.field-meta.xml
<CustomField>
    <fullName>Empty_State_Message__c</fullName>
    <label>Empty State Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>