force-app/main/default/objects/Billing_Center_Section_Config__c/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KPI Row</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Grouped Table</fullName>
            </value>
            <value>
                <fullName>Accordion</fullName>
            </value>
            <value>
                <fullName>Tabset</fullName>
            </value>
            <value>
                <fullName>Action Bar</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>